# L6UI

./: .gitignore  CMakeLists.txt  CustomLookAndFeel.h  L6UI-win.jucer  L6UI.jucer  Main.cpp  MainComponent.cpp  MainComponent.h  README.md
Builds/LinuxMakefile/: Makefile
Builds/VisualStudio2022/: L6UI.sln  L6UI_App.vcxproj  L6UI_App.vcxproj.filters
Builds/VisualStudio2026/: L6UI-win.sln  L6UI-win_App.vcxproj  L6UI-win_App.vcxproj.filters  L6UI.sln  L6UI_App.vcxproj  L6UI_App.vcxproj.filters  resources.rc
JuceLibraryCode/: JuceHeader.h
Source/: CustomLookAndFeel.h  MainComponent.cpp
